adding call-to-action jumbotron
Signed-off-by: Nathanial L. McConnell <FluxAugur@gmail.com>

--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -5,6 +5,9 @@
         {% include navigation.html %}
       </header>
       <div id="main" class="container">
+        <div id="call-to-action">
+          {% include call_to_action.html %}
+        </div>
         <div id="content">
           {{ content | expand_urls: root_url }}
         </div>
