adding about page; adding about nav; updating links in call-to-action

--- a/source/_includes/call_to_action.html
+++ b/source/_includes/call_to_action.html
@@ -4,5 +4,5 @@
   {% if site.subtitle %}
     <h2>{{ site.subtitle }}</h2>
   {% endif %}
-  <p><a class="btn btn-primary btn-lg">Learn more</a></p>
+  <p><a class="btn btn-primary btn-lg" href="{{ root_url }}/about.html">Learn more</a></p>
 </div>
