--- a/source/_includes/call_to_action.html
+++ b/source/_includes/call_to_action.html
@@ -1,8 +1,10 @@
-<div class="jumbotron">
-  {% img pull-right /images/logo.png 225 207 'Disciples of Code logo' %}
-  <h1><a href="{{ root_url }}/">{{ site.title }}</a></h1>
-  {% if site.subtitle %}
-    <h2>{{ site.subtitle }}</h2>
-  {% endif %}
-  <p><a class="btn btn-primary btn-lg" href="{{ root_url }}/about.html">Learn more</a></p>
+<div id="call-to-action">
+  <div class="jumbotron">
+    {% img pull-right /images/logo.png 225 207 'Disciples of Code logo' %}
+    <h1><a href="{{ root_url }}/">{{ site.title }}</a></h1>
+    {% if site.subtitle %}
+      <h2>{{ site.subtitle }}</h2>
+    {% endif %}
+    <p><a class="btn btn-primary btn-lg" href="{{ root_url }}/about.html">Learn more</a></p>
+  </div>
 </div>
