--- a/source/_includes/custom/head.html
+++ b/source/_includes/custom/head.html
@@ -1,3 +1,5 @@
-<link href="{{ root_url }}/assets/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-<link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootswatch/3.0.0/slate/bootstrap.min.css"/>
-<link href="{{ root_url }}/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css">
+<link rel="stylesheet" href="{{ root_url }}/assets/bootstrap/dist/css/bootstrap.min.css" type="text/css">
+<link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootswatch/3.0.0/slate/bootstrap.min.css" type="text/css"/>
+<link rel="stylesheet" href="{{ root_url }}/assets/bootplus/css/bootplus-responsive.min.css" type="text/css"/>
+<link rel="stylesheet" href="{{ root_url }}/assets/bootplus/css/bootplus.css" type="text/css"/>
+<link rel="stylesheet" href="{{ root_url }}/stylesheets/screen.css" media="screen, projection" type="text/css">
