--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -1,16 +1,9 @@
 {% capture root_url %}{{ site.root | strip_slash }}{% endcapture %}{% include head.html %}
   <body {% if page.body_id %} id="{{ page.body_id }}" {% endif %} {% if page.sidebar == false %} class="no-sidebar" {% endif %} {% if page.sidebar == 'collapse' or site.sidebar == 'collapse' %} class="collapse-sidebar sidebar-footer" {% endif %}>
     <div id="wrap">
-      <header role="banner">
-        {% include navigation.html %}
-      </header>
-      <div id="main" class="container">
-        <div id="call-to-action">
-          {% include call_to_action.html %}
-        </div>
-        <div id="content">
-          {{ content | expand_urls: root_url }}
-        </div>
+      {% include navigation.html %}
+      <div id="main" class="container-fluid">
+        {% include blog.html %}
       </div>
     </div>
     <footer role="contentinfo">{% include footer.html %}</footer>
