updating card layout on blog index; updating post and about pages;

--- a/source/_includes/custom/footer.html
+++ b/source/_includes/custom/footer.html
@@ -2,6 +2,7 @@
   Copyright &copy; {{ site.time | date: "%Y" }} - {{ site.author }}<br>
   <small>
       <span class="credit">Powered by <a href="http://octopress.org">Octopress</a></span>,
-      <span class="credit">customized with <a href="https://github.com/kAworu/octostrap3">octostrap3</a></span>.
+      <span class="credit">customized with <a href="https://github.com/kAworu/octostrap3">octostrap3</a></span>, 
+      <span class="credit">comments powered by <a href="http://disqus.com" class="dsq-brlink">Disqus</a></span>.
   </small>
 </p>
