--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -1,12 +1,18 @@
-{% capture root_url %}{{ site.root | strip_slash }}{% endcapture %}{% include head.html %}
+  {% capture root_url %}{{ site.root | strip_slash }}{% endcapture %}
+  {% include head.html %}
   <body {% if page.body_id %} id="{{ page.body_id }}" {% endif %} {% if page.sidebar == false %} class="no-sidebar" {% endif %} {% if page.sidebar == 'collapse' or site.sidebar == 'collapse' %} class="collapse-sidebar sidebar-footer" {% endif %}>
     <div id="wrap">
       {% include navigation.html %}
       <div id="main" class="container-fluid">
-        {% include blog.html %}
+        <div class="row-fluid">
+          {% include call_to_action.html %}
+          {% include content.html %}
+        </div>
       </div>
     </div>
-    <footer role="contentinfo">{% include footer.html %}</footer>
+    <footer role="contentinfo">
+      {% include footer.html %}
+    </footer>
     {% include after_footer.html %}
   </body>
 </html>
