--- a/source/_layouts/post.html
+++ b/source/_layouts/post.html
@@ -4,8 +4,8 @@ navbar: Blog
 single: true
 ---
 
-<div class="row">
-  <div class="page-content {% unless page.sidebar == false or site.post_asides == empty and site.default_asides == empty %}col-md-9{% else %}col-md-12{% endunless %}">
+<div class="page-content {% unless page.sidebar == false or site.post_asides == empty and site.default_asides == empty %}col-md-9{% else %}col-md-12{% endunless %}">
+  <div class="row-fluid">
     <article class="hentry" role="article">
       {% include article.html %}
       <footer>
@@ -32,12 +32,15 @@ single: true
     {% if site.disqus_short_name and page.comments == true %}
       <section>
         <h1>Comments</h1>
-        <div id="disqus_thread" aria-live="polite">{% include post/disqus_thread.html %}</div>
+        <div id="disqus_thread" aria-live="polite">
+          {% include post/disqus_thread.html %}
+        </div>
       </section>
     {% endif %}
   </div>
+</div>
 
-  {% unless page.sidebar == false or site.post_asides == empty and site.default_asides == empty %}
+{% unless page.sidebar == false or site.post_asides == empty and site.default_asides == empty %}
   <aside class="sidebar col-md-3">
     {% if site.post_asides.size %}
       {% include_array post_asides %}
@@ -45,5 +48,4 @@ single: true
       {% include_array default_asides %}
     {% endif %}
   </aside>
-  {% endunless %}
-</div>
+{% endunless %}
