redesigned about pages; wrote 3 part article about site

--- a/source/_includes/about.html
+++ b/source/_includes/about.html
@@ -1,3 +1,19 @@
 <div class="about">
-  <h2>Disciples of Code, Decoded</h2>
+  <h2>About Disciples of Code</h2>
+  <hr>
+  <p>Disciples of Code is an instructional blog devoted to teaching the ways of code through a collaborative online process.</p>
+  <p>As such, we strive to convey our passion, knowledge, and technique to anyone willing to put forth the effort to learn.</p>
+  <p>We hold to a few mantras as we continuously learn to code.</p>
+  <hr>
+  <blockquote>
+    <p>Less code is better</p>
+    <p>Nothing is sacred</p>
+    <p>Make it work, make it right, then make it fast</p>
+    <p>Understand what you are going to do before you do it</p>
+    <p>Refactor often</p>
+    <p>No FUD (fear, uncertainty, or doubt)</p>
+    <p>Release and build often</p>
+    <p>Separation of duties is good</p>      
+  </blockquote>
+  <hr>
 </div>
