--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -24,17 +24,19 @@ footer[role=contentinfo] {
 
 .octopress-authorbox {
   border-top: 4px solid #333;
-  background-color: #eee;
+  background-color: #272b30;
 
   .author-pic {
-    float: left;
-    margin: 8px;
+    margin-top: 5px;
+  }
+
+  .author-pic img {
+    border: #c8c8c8 1px solid;
+    height: 50px;
   }
   
   .author-about {
-    float: left;
     margin: 5px;
-    padding: 5px;
     ul {
       list-style: none;
       
@@ -45,12 +47,4 @@ footer[role=contentinfo] {
     }
   
   }
-}
-
-.octopress-authorbox:after {
-    content: ".";
-    display: block;
-    height: 0;
-    clear: both;
-    visibility: hidden;
 }
