--- a/source/_includes/about.html
+++ b/source/_includes/about.html
@@ -1,4 +1,4 @@
-<div class="about">
+<div class="row-fluid" id="about">
   <h2>About Disciples of Code</h2>
   <hr>
   <p>Disciples of Code is an instructional blog devoted to teaching the ways of code through a collaborative online process.</p>
