--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -3,9 +3,11 @@
   <body {% if page.body_id %} id="{{ page.body_id }}" {% endif %} {% if page.sidebar == false %} class="no-sidebar" {% endif %} {% if page.sidebar == 'collapse' or site.sidebar == 'collapse' %} class="collapse-sidebar sidebar-footer" {% endif %}>
     <div id="wrap">
       {% include navigation.html %}
+      <header class="page-header">
+        {% include call_to_action.html %}
+      </header>
       <div id="main" class="container-fluid">
         <div class="row-fluid">
-          {% include call_to_action.html %}
           {% include content.html %}
         </div>
       </div>
