adding author_generator

--- a/source/_includes/about.html
+++ b/source/_includes/about.html
@@ -1,9 +1,11 @@
 <div class="row-fluid" id="about">
-  <h2>About Disciples of Code</h2>
+  <h2 class="text-center">About Disciples of Code</h2>
   <hr>
-  <p>Disciples of Code is an instructional blog devoted to teaching the ways of code through a collaborative online process.</p>
-  <p>As such, we strive to convey our passion, knowledge, and technique to anyone willing to put forth the effort to learn.</p>
-  <p>We hold to a few mantras as we continuously learn to code.</p>
+  <blockquote class="blockquote-reverse">
+    <p>Disciples of Code is an instructional blog devoted to teaching the ways of code through a collaborative online process.</p>
+    <p>As such, we strive to convey our passion, knowledge, and technique to anyone willing to put forth the effort to learn.</p>
+    <p>We hold to a few mantras as we continuously learn to code.</p>    
+  </blockquote>
   <hr>
   <blockquote>
     <p>Less code is better</p>
