--- a/source/_includes/custom/card_content.html
+++ b/source/_includes/custom/card_content.html
@@ -1,5 +1,7 @@
 <div class="card">
-  <h2 class="card-heading simple"><a href="{{ root_url }}{{ post.url }}">{{ post.title }}</a></h2>
+  <h2 class="card-heading simple">
+    <a href="{{ root_url }}{{ post.url }}">{{ post.title }}</a>
+  </h2>
   <div class="card-body">
     <p>{{ post.content | strip_html | truncatewords: 75 }}<br>
     <a href="{{ post.url }}">Read more...</a></p>
