--- a/source/_includes/after_footer.html
+++ b/source/_includes/after_footer.html
@@ -1,5 +1,6 @@
 <script src="{{ root_url }}/assets/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="{{ root_url }}/javascripts/modernizr-2.0.js"></script>
+<!-- <script src="{{ root_url }}/javascripts/scrollshrink.js"></script> -->
 {% include disqus.html %}
 {% include facebook_like.html %}
 {% include google_plus_one.html %}
