--- a/source/_layouts/post.html
+++ b/source/_layouts/post.html
@@ -48,6 +48,7 @@ single: true
         </footer>
       </div>
     </article>
+    {% include post/revision.html %}
     {% if site.disqus_short_name and page.comments == true %}
       <section>
         <h1>Comments</h1>
