--- a/source/_includes/custom/asides/facebook_like.html
+++ b/source/_includes/custom/asides/facebook_like.html
@@ -1,5 +1,5 @@
 {% if site.facebook_like_box_href %}
-<section>
+<section class="panel panel-default">
     <h3>Fresh from Facebook</h3>
     <div class="fb-like-box"
         data-href="{{ site.facebook_like_box_href }}"
