adding google form

--- a/source/_includes/custom/head.html
+++ b/source/_includes/custom/head.html
@@ -3,3 +3,14 @@
 <link rel="stylesheet" href="{{ root_url }}/assets/bootplus/css/bootplus-responsive.min.css" type="text/css"/>
 <link rel="stylesheet" href="{{ root_url }}/assets/bootplus/css/bootplus.css" type="text/css"/>
 <link rel="stylesheet" href="{{ root_url }}/stylesheets/screen.css" media="screen, projection" type="text/css">
+<!-- jQuery -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+<script type="text/javascript">
+    // Avoid conflict with ender.js.
+    jQuery.noConflict();
+</script>
+<!-- jQuery Form Plugin -->
+<script src="http://malsup.github.com/jquery.form.js"></script>
+<!-- jQuery Form Validation Plugin -->
+<script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.9/jquery.validate.min.js"></script> 
+<script src="{{ root_url }}/javascripts/google_form.js"></script>
