--- a/source/_includes/custom/asides/popular_posts.html
+++ b/source/_includes/custom/asides/popular_posts.html
@@ -1,10 +1,10 @@
-<section>
-  <h1>Popular Posts</h1>
-  <ul id="recent_posts">
+<section class="panel panel-default">
+  <div class="panel-heading">
+    <h3 class="panel-title">Popular</h3>
+  </div>
+  <div id="popular_posts" class="list-group">
     {% for post in site.popular_posts limit: site.popular_posts_count %}
-      <li class="post">
-        <a href="{{ root_url }}{{ post.url }}">{{ post.title }}</a>
-      </li>
+    <a class="list-group-item {% if post.url == page.url %}active{% endif %}" href="{{ root_url }}{{ post.url }}">{%if site.titlecase %}{{ post.title | titlecase }}{% else %}{{ post.title }}{% endif %}</a>
     {% endfor %}
-  </ul>
+  </div>
 </section>
