--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -15,7 +15,7 @@
                     <a href="{{ root_url }}/">Blog</a>
                 </li>
                 <li {% if page.navbar == 'Archives' %}class="active"{% endif %}>
-                    <a href="{{ root_url }}/blog/archives">Archives</a>
+                    <a href="{{ root_url }}/archives">Archives</a>
                 </li>
                 <li {% if page.navbar == 'About' %}class="active"{% endif %}>
                     <a href="{{ root_url }}/about.html">About</a>
