omitting revision code if no revisions present

--- a/source/_includes/post/revision.html
+++ b/source/_includes/post/revision.html
@@ -1,4 +1,6 @@
-<section>
-  <h1> Change History </h1>
-  {% revision limit:5 %}
-</section>
+{% if revision %}
+  <section>
+    <h1> Change History </h1>
+    {% revision limit:5 %}
+  </section>
+{% endif %}
