configuring and styling Google form for contact us functionality

--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -20,6 +20,9 @@
                 <li {% if page.navbar == 'About' %}class="active"{% endif %}>
                     <a href="{{ root_url }}/about.html">About</a>
                 </li>
+                <li {% if page.navbar == 'Contact' %}class="active"{% endif %}>
+                    <a href="{{ root_url }}/contact.html">Contact</a>
+                </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li>
