--- a/source/_layouts/contact.html
+++ b/source/_layouts/contact.html
@@ -7,21 +7,24 @@ navbar: Blog
   <div class="row-fluid">
     <div class="{% unless about.sidebar == false or site.about_asides == empty and site.default_asides == empty %}col-md-4{% else %}col-md-3{% endunless %}">
       <div class="row-fluid">
-        {% include custom/card_author.html %}
       </div>
     </div>
     <div class="{% unless about.sidebar == false or site.about_asides == empty and site.default_asides == empty %}col-md-8{% else %}col-md-6{% endunless %}">
       <div class="row-fluid">
-        {% include about.html %}
+        <blockquote>
+          <h2>Make Contact</h2>
+          <hr>
+          {% google_form 18pu67lSnbc8XDx75dgxClMkNMM66alubmDPTcwiAoTw Thank you for contacting us. Someone will be in touch with you soon. %}
+        </blockquote>
       </div>
     </div>
   </div>
 </div>
 
-{% unless about.sidebar == false or site.about_asides == empty and site.default_asides == empty %}
+{% unless contact.sidebar == false or site.contact_asides == empty and site.default_asides == empty %}
   <aside class="sidebar col-md-3">
-    {% if site.about_asides.size %}
-      {% include_array about_asides %}
+    {% if site.contact_asides.size %}
+      {% include_array contact_asides %}
     {% else %}
       {% include_array default_asides %}
     {% endif %}
