--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -134,13 +134,15 @@ div.jumbotron.shrink .container {
     display: none;
   }
   .ss-form-entry {
+    margin-bottom: 50px;
+
     label {
-      display:block;
+      display: inline;
     }
     input {
       display: block;
       padding: 5px;
-      width: 250px;
+      width: 450px;
       font: inherit;
     }
     textarea {
@@ -152,5 +154,12 @@ div.jumbotron.shrink .container {
   .ss-navigate input {
     width: auto;
     cursor: pointer;
+  }
+  .ss-required-asterisk {
+    visibility: hidden;
+  }
+  #ss-submit {
+    background-image: linear-gradient(#8a9196,#7a8288 60%,#70787d);
+    background-repeat: no-repeat;
   }
 }
