adding & configuring new search

--- a/source/_includes/custom/lunr-search/search-form.html
+++ b/source/_includes/custom/lunr-search/search-form.html
@@ -1,5 +1,5 @@
-<form action="/search" method="get">
+<form class="search navbar-form navbar-right" action="/search" method="GET">
   <fieldset role ="search">
-    <input type="text" id="search-query" name="q" placeholder="Search" autocomplete="off" class="search" />
+    <input class="form-control" type="text" id="search-query" name="q" placeholder="Search" autocomplete="off" />
   </fieldset>
 </form>
