--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -48,6 +48,9 @@
                     </div>
                 </form>
             {% endif %}
+            {% if site.lunr_search == true %}
+                {% include custom/lunr-search/search-form.html %}
+            {% endif %}
         </div>
     </div>
 </nav>
