adding favicons, touch icons, facebook_facepile

--- a/source/_includes/facebook_like.html
+++ b/source/_includes/facebook_like.html
@@ -4,7 +4,8 @@
     var js, fjs = d.getElementsByTagName(s)[0];
     if (d.getElementById(id)) return;
     js = d.createElement(s); js.id = id;
-    js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=731859596826236";
+    js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId={{ site.facebook_app_id }}";
     fjs.parentNode.insertBefore(js, fjs);
-  }(document, 'script', 'facebook-jssdk'));</script>
+  }(document, 'script', 'facebook-jssdk'));
+  </script>
 {% endif %}
