--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -163,3 +163,16 @@ div.jumbotron.shrink .container {
     background-repeat: no-repeat;
   }
 }
+
+.pullquote-right:before, .pullquote-left:before {
+  padding: 0;
+  border: none;
+  content: attr(data-pullquote);
+  float: right;
+  width: 45%;
+  margin: 0.5em 0 1em 1.5em;
+  position: relative;
+  top: 7px;
+  font-size: 1.4em;
+  line-height: 1.45em;
+}
