--- a/source/_includes/head.html
+++ b/source/_includes/head.html
@@ -1,14 +1,14 @@
-<!--DOCTYPE html>
+<!DOCTYPE html>
 <!--[if IEMobile 7 ]><html class="no-js iem7"><![endif]-->
 <!--[if lt IE 9]><html class="no-js lte-ie8"><![endif]-->
-<!--[if (gt IE 8)|(gt IEMobile 7)|!(IEMobile)|!(IE)]><!-->
-<html class="no-js" lang="en"><!--<![endif]-->
+<!--[if (gt IE 8)|(gt IEMobile 7)|!(IEMobile)|!(IE)]><!--><html class="no-js" lang="en"><!--<![endif]-->
 <head>
   <meta charset="utf-8">
-  <title>{% if page.title %}{{ page.title }} - {% endif %}{{ site.title }}</title>
+  <title>{% if page.title %}{% if site.titlecase %}{{ page.title | titlecase }}{% else %}{{ page.title }}{% endif %} - {% endif %}{{ site.title }}</title>
   <meta name="author" content="{{ site.author }}">
 
-  {% if page.description %}<meta name="description" content="{{ page.description | strip_html | condense_spaces | truncate:150 }}">{% endif %}
+  {% capture description %}{% if page.description %}{{ page.description }}{% else %}{{ content | raw_content }}{% endif %}{% endcapture %}
+  <meta name="description" content="{{ description | strip_html | condense_spaces | truncate:150 }}">
   {% if page.keywords %}<meta name="keywords" content="{{ page.keywords }}">{% endif %}
 
   <!-- http://t.co/dKP3o1e -->
@@ -18,30 +18,13 @@
 
   {% capture canonical %}{{ site.url }}{% if site.permalink contains '.html' %}{{ page.url }}{% else %}{{ page.url | remove:'index.html' | strip_slash }}{% endif %}{% endcapture %}
   <link rel="canonical" href="{{ canonical }}">
-  <link rel="shortcut icon" href="{{ root_url }}/images/favicon.ico">
-  <link rel="apple-touch-icon" sizes="57x57" href="{{ root_url }}/images/apple-touch-icon-57x57.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="{{ root_url }}/images/apple-touch-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="{{ root_url }}/images/apple-touch-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="{{ root_url }}/images/apple-touch-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="{{ root_url }}/images/apple-touch-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="{{ root_url }}/images/apple-touch-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="{{ root_url }}/images/apple-touch-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="{{ root_url }}/images/apple-touch-icon-152x152.png">
-  <link rel="icon" type="image/png" href="{{ root_url }}/images/favicon-196x196.png" sizes="196x196">
-  <link rel="icon" type="image/png" href="{{ root_url }}/images/favicon-160x160.png" sizes="160x160">
-  <link rel="icon" type="image/png" href="{{ root_url }}/images/favicon-96x96.png" sizes="96x96">
-  <link rel="icon" type="image/png" href="{{ root_url }}/images/favicon-16x16.png" sizes="16x16">
-  <link rel="icon" type="image/png" href="{{ root_url }}/images/favicon-32x32.png" sizes="32x32">
-  <meta name="msapplication-TileColor" content="#da532c">
-  <meta name="msapplication-TileImage" content="{{ root_url }}/images/mstile-144x144.png">
-  <meta name="msapplication-square70x70logo" content="{{ root_url }}/images/mstile-70x70.png">
-  <meta name="msapplication-square144x144logo" content="{{ root_url }}/images/mstile-144x144.png">
-  <meta name="msapplication-square150x150logo" content="{{ root_url }}/images/mstile-150x150.png">
-  <meta name="msapplication-square310x310logo" content="{{ root_url }}/images/mstile-310x310.png">
-  <meta name="msapplication-wide310x150logo" content="{{ root_url }}/images/mstile-310x150.png">
+  <link href="{{ root_url }}/favicon.png" rel="icon">
+  <link href="{{ root_url }}/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css">
   <link href="{{ site.subscribe_rss }}" rel="alternate" title="{{site.title}}" type="application/atom+xml">
-
+  <script src="{{ root_url }}/javascripts/modernizr-2.0.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script>!window.jQuery && document.write(unescape('%3Cscript src="./javascripts/libs/jquery.min.js"%3E%3C/script%3E'))</script>
+  <script src="{{ root_url }}/javascripts/octopress.js" type="text/javascript"></script>
   {% include custom/head.html %}
-
   {% include google_analytics.html %}
 </head>
