--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -1,20 +1,14 @@
-  {% capture root_url %}{{ site.root | strip_slash }}{% endcapture %}
-  {% include head.html %}
-  <body {% if page.body_id %} id="{{ page.body_id }}" {% endif %} {% if page.sidebar == false %} class="no-sidebar" {% endif %} {% if page.sidebar == 'collapse' or site.sidebar == 'collapse' %} class="collapse-sidebar sidebar-footer" {% endif %}>
-    <div id="wrap">
-      {% include navigation.html %}
-      <header class="page-header">
-        {% include call_to_action.html %}
-      </header>
-      <div id="main" class="container-fluid">
-        <div class="row-fluid">
-          {% include content.html %}
-        </div>
-      </div>
+{% capture root_url %}{{ site.root | strip_slash }}{% endcapture %}
+{% include head.html %}
+<body {% if page.body_id %} id="{{ page.body_id }}" {% endif %} {% if page.sidebar == false %} class="no-sidebar" {% endif %} {% if page.sidebar == 'collapse' or site.sidebar == 'collapse' %} class="collapse-sidebar sidebar-footer" {% endif %}>
+  <header role="banner">{% include header.html %}</header>
+  <nav role="navigation">{% include navigation.html %}</nav>
+  <div id="main">
+    <div id="content">
+      {{ content | expand_urls: root_url }}
     </div>
-    <footer role="contentinfo">
-      {% include footer.html %}
-    </footer>
-    {% include after_footer.html %}
-  </body>
+  </div>
+  <footer role="contentinfo">{% include footer.html %}</footer>
+  {% include after_footer.html %}
+</body>
 </html>
