--- a/source/_includes/asides/recent_posts.html
+++ b/source/_includes/asides/recent_posts.html
@@ -5,12 +5,7 @@
   {{ site.post }}
   <div id="recent_posts" class="list-group">
     {% for post in site.posts limit: site.recent_posts %}
-      <a class="list-group-item {% if post.url == page.url %}active{% endif %}" href="{{ root_url }}{{ post.url }}">
-      {% if site.titlecase %}
-        {{ post.title | titlecase }}
-      {% else %}
-        {{ post.title }}
-      {% endif %}</a>
+    <a class="list-group-item {% if post.url == page.url %}active{% endif %}" href="{{ root_url }}{{ post.url }}">{% if site.titlecase %}{{ post.title | titlecase }}{% else %}{{ post.title }}{% endif %}</a>
     {% endfor %}
   </div>
 </section>
