--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -1,5 +1,12 @@
 body {
   padding-bottom: 70px;
+  font-family: 'Electrolize', sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6,
+.h1, .h2, .h3, .h4, .h5, .h6 {
+  font-family: 'Iceberg', cursive;
+  font-weight: normal;
 }
 
 #wrap {
