--- a/source/_includes/custom/head.html
+++ b/source/_includes/custom/head.html
@@ -1,3 +1,5 @@
+<link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Iceberg' type='text/css'>
+<link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Electrolize' type='text/css'>
 <link rel="stylesheet" href="{{ root_url }}/assets/bootstrap/dist/css/bootstrap.min.css" type="text/css">
 <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootswatch/3.0.0/slate/bootstrap.min.css" type="text/css"/>
 <link rel="stylesheet" href="{{ root_url }}/assets/bootplus/css/bootplus-responsive.min.css" type="text/css"/>
