--- a/source/_includes/custom/asides/tag_cloud.html
+++ b/source/_includes/custom/asides/tag_cloud.html
@@ -1,4 +1,8 @@
-<section>
-  <h3>Tag Cloud</h3>
-    <span id="tag-cloud"><h6>{% tag_cloud counter:true %}</h6></span>
+<section class="tag-cloud">
+  <div class="tag-cloud-heading">
+    <h3 class="tag-cloud-title">Tag Cloud</h3>
+    <span id="tag-cloud" class="tag-cloud">
+      {% tag_cloud counter:true %}
+    </span>
+  </div>
 </section>
