updating card author posts

--- a/source/_includes/custom/card_author.html
+++ b/source/_includes/custom/card_author.html
@@ -9,14 +9,67 @@
   <div class="card-body">
     <h4 class="text-left">Nathanial L. McConnell</h4>
     <p class="text-right">Founder of <a href="http://disciplesofcode.com">disciplesofcode.com</a></p>
-    <p class="text-center"><a href="#" class="card-comments-collapse-toggle" data-toggle="collapse" data-target=".card-comments-collapse"><span class="badge">4</span></a> Posts - Read Now...
+    <p class="text-center"><a href="#" class="card-comments-collapse-toggle" data-toggle="collapse" data-target=".card-comments-collapse"><span class="badge">19</span></a> Posts - Read Now...
   </div>
   <div class="card-comments-collapse collapse">
     <ul class="card card-comments">
-      <li><a class="list-group-item " href="/blog/2014/02/disciples-of-code-decoded-part-3-discipline-as-disciples/">Disciples of Code, Decoded - Part 3: Discipline as Disciples</a></li>
-      <li><a class="list-group-item " href="/blog/2014/02/disciples-of-code-decoded-part-2-decoding-the-why/">Disciples of Code, Decoded - Part 2: Decoding the Why</a></li>
-      <li><a class="list-group-item " href="/blog/2014/02/disciples-of-code-decoded-part-1-code/">Disciples of Code, Decoded - Part 1: Code?</a></li>
-      <li><a class="list-group-item " href="/blog/2014/02/welcome-to-disciples-of-code/">Welcome to Disciples of Code!</a></li>
+      <li>
+        <a class="list-group-item" href="/blog/2014/07/a-ruby-primer-part-13-relational-operators/">A Ruby Primer - Part 13: Relational Operators</a>
+      </li>
+      <li>
+        <a class="list-group-item" href="/blog/2014/06/a-ruby-primer-part-12-arithmetic-operators/">A Ruby Primer - Part 12: Arithmetic Operators</a>
+      </li>
+      <li>
+        <a class="list-group-item" href="/blog/2014/04/a-ruby-primer-exercise-2-a-random-number-min-max-detector/">A Ruby Primer - Exercise 2: A Random Number Min-Max Detector</a>
+      </li>
+      <li>
+        <a class="list-group-item" href="/blog/2014/04/a-ruby-primer-part-11-variables-and-constants/">A Ruby Primer - Part 11: Variables and Constants</a>
+      </li>
+      <li>
+        <a class="list-group-item" href="/blog/2014/04/a-ruby-primer-part-10-hashes/">A Ruby Primer - Part 10: Hashes</a>
+      </li>
+      <li>
+        <a class="list-group-item" href="/blog/2014/04/a-ruby-primer-part-9-arrays/">A Ruby Primer - Part 9: Arrays</a>
+      </li>
+      <li>
+        <a class="list-group-item" href="/blog/2014/04/a-ruby-primer-part-8-ranges/">A Ruby Primer - Part 8: Ranges</a>
+      </li>
+      <li>
+        <a class="list-group-item" href="/blog/2014/04/a-ruby-primer-part-7-booleans/">A Ruby Primer - Part 7: Booleans</a>
+      </li>
+      <li>
+        <a class="list-group-item" href="/blog/2014/04/a-ruby-primer-part-6-numbers/"> A Ruby Primer - Part 6: Numbers</a>
+      </li>
+      <li>
+        <a class="list-group-item" href="/blog/2014/04/a-ruby-primer-part-5-strings/">A Ruby Primer - Part 5: Strings</a>
+      </li>
+      <li>
+        <a class="list-group-item" href="/blog/2014/03/a-ruby-primer-exercise-1-a-simple-command-line-calculator/">A Ruby Primer - Exercise 1: A Simple Command Line Calculator</a>
+      </li>
+      <li>
+        <a class="list-group-item" href="/blog/2014/03/a-ruby-primer-part-4-outputting-and-inputting-data/">A Ruby Primer - Part 4: Outputting and Inputting Data</a>
+      </li>
+      <li>
+        <a class="list-group-item" href="/blog/2014/03/a-ruby-primer-part-3-ruby-scripts/">A Ruby Primer - Part 3: Ruby Scripts</a>
+      </li>
+      <li>
+        <a class="list-group-item" href="/blog/2014/03/a-ruby-primer-part-2-using-the-ruby-interactive-shell-irb/">A Ruby Primer - Part 2: Using the Ruby Interactive Shell (IRB)</a>
+      </li>
+      <li>
+        <a class="list-group-item" href="/blog/2014/03/a-ruby-primer-part-1-setting-up-your-development-environment/">A Ruby Primer - Part 1: Setting Up Your Development Environment</a>
+      </li>
+      <li>
+        <a class="list-group-item" href="/blog/2014/02/disciples-of-code-decoded-part-3-discipline-as-disciples/">Disciples of Code, Decoded - Part 3: Discipline as Disciples</a>
+      </li>
+      <li>
+        <a class="list-group-item" href="/blog/2014/02/disciples-of-code-decoded-part-2-decoding-the-why/">Disciples of Code, Decoded - Part 2: Decoding the Why</a>
+      </li>
+      <li>
+        <a class="list-group-item" href="/blog/2014/02/disciples-of-code-decoded-part-1-code/">Disciples of Code, Decoded - Part 1: Code?</a>
+      </li>
+      <li>
+        <a class="list-group-item" href="/blog/2014/02/welcome-to-disciples-of-code/">Welcome to Disciples of Code!</a>
+      </li>
     </ul>
   </div>
-</div> 
+</div>
