--- a/source/_includes/custom/card_author.html
+++ b/source/_includes/custom/card_author.html
@@ -9,10 +9,13 @@
   <div class="card-body">
     <h4 class="text-left">Nathanial L. McConnell</h4>
     <p class="text-right">Founder of <a href="http://disciplesofcode.com">disciplesofcode.com</a></p>
-    <p class="text-center"><a href="#" class="card-comments-collapse-toggle" data-toggle="collapse" data-target=".card-comments-collapse"><span class="badge">19</span></a> Posts - Read Now...
+    <p class="text-center"><a href="#" class="card-comments-collapse-toggle" data-toggle="collapse" data-target=".card-comments-collapse"><span class="badge">20</span></a> Posts - Read Now...
   </div>
   <div class="card-comments-collapse collapse">
     <ul class="card card-comments">
+      <li>
+        <a class="list-group-item" href="2014/07/a-ruby-primer-part-14-logical-operators/">A Ruby Primer - Part 14: Logical Operators</a>
+      </li>
       <li>
         <a class="list-group-item" href="/2014/07/a-ruby-primer-part-13-relational-operators/">A Ruby Primer - Part 13: Relational Operators</a>
       </li>
